Split batch project. Updated common functionality