@@ -24,8 +24,7 @@ public class PropertiesFile extends Properties {
 	public void loadUsingClassLoader(String fileName) throws IOException {
 		URL url = ClassLoader.getSystemResource(fileName);
 		if (url == null) {
-			throw new FileNotFoundException("File '" + fileName
-					+ "' could not be found.");
+			throw new FileNotFoundException("File '" + fileName + "' could not be found.");
 		}
 		loadProperties(new FileInputStream(new File(url.getFile())));
 	}
@@ -43,83 +42,80 @@ public class PropertiesFile extends Properties {
 			Object key1 = keys[i];
 			Object value1 = super.get(key1);
 			String var = "${" + key1 + "}";
-			loop2: for (int j = 0; j < keys.length; j++) {
+			for (int j = 0; j < keys.length; j++) {
 				Object key2 = keys[j];
 				String value2 = super.get(key2).toString();
 				if (value2.contains(var)) {
 					super.remove(key2);
 					super.put(key2, value2.replace(var, value1.toString()));
 					i = 0;
-					break loop2;
+					break;
 				}
 			}
 		}
 	}
 
-	public String get(String key) {
+	public String getString(String key) {
 		return super.getProperty(key);
 	}
 
-	public String get(String key, String defaultValue) {
+	public String getString(String key, String defaultValue) {
 		return super.getProperty(key, defaultValue);
 	}
 
 	public Integer getInteger(String key) {
-		return new Integer(get(key));
+		return Integer.valueOf(getString(key));
 	}
 
 	public Integer getInteger(String key, Integer defaultValue) {
-		return new Integer(get(key, defaultValue.toString()));
+		return Integer.valueOf(getString(key, defaultValue.toString()));
 	}
 
 	public Long getLong(String key) {
-		return new Long(get(key));
+		return Long.valueOf(getString(key));
 	}
 
 	public Long getLong(String key, Long defaultValue) {
-		return new Long(get(key, defaultValue.toString()));
+		return Long.valueOf(getString(key, defaultValue.toString()));
 	}
 
 	public Float getFloat(String key) {
-		return new Float(get(key));
+		return Float.valueOf(getString(key));
 	}
 
 	public Float getFloat(String key, Float defaultValue) {
-		return new Float(get(key, defaultValue.toString()));
+		return Float.valueOf(getString(key, defaultValue.toString()));
 	}
 
 	public Double getDouble(String key) {
-		return new Double(get(key));
+		return Double.valueOf(getString(key));
 	}
 
 	public Double getDouble(String key, Double defaultValue) {
-		return new Double(get(key, defaultValue.toString()));
+		return Double.valueOf(getString(key, defaultValue.toString()));
 	}
 
 	public Boolean getBoolean(String key) {
-		return new Boolean(get(key));
+		return Boolean.valueOf(getString(key));
 	}
 
 	public Boolean getBoolean(String key, Boolean defaultValue) {
-		return new Boolean(get(key, defaultValue.toString()));
+		return Boolean.valueOf(getString(key, defaultValue.toString()));
 	}
 
-	public static PropertiesFile createFromFile(String fileName)
-			throws FileNotFoundException, IOException {
+	public static PropertiesFile createFromFile(String fileName) throws FileNotFoundException, IOException {
 		PropertiesFile properties = new PropertiesFile();
 		properties.loadFromFile(fileName);
 		return properties;
 	}
 
-	public static PropertiesFile createFromClasspath(String fileName)
-			throws IOException {
+	public static PropertiesFile createFromClasspath(String fileName) throws IOException {
 		PropertiesFile properties = new PropertiesFile();
 		properties.loadFromClasspath(fileName);
 		return properties;
 	}
 
-	public static PropertiesFile createUsingClassLoader(String fileName)
-			throws IOException {
+	public static PropertiesFile createUsingClassLoader(String fileName) throws IOException {
 		PropertiesFile properties = new PropertiesFile();
 		properties.loadUsingClassLoader(fileName);
 		return properties;
